# autotools-helloworld

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
.deps/: helloworld.Po
include/: config.h  config.h.in
src/: helloconf.c  helloworld.c
