#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([helloworld], [1.2], [travor_lzh@outlook.com])
AM_INIT_AUTOMAKE([helloworld],[0.1])
AC_CONFIG_SRCDIR([src/helloworld.c])
# Checks for programs.
AC_PROG_CC
# Checks for libraries.
AC_CHECK_LIB([c],[printf])
# Checks for header files.
AC_CONFIG_HEADERS([include/config.h])
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
echo "Successfully configured helloworld, now type 'make && make install' to build"
